--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "tsdx build",
     "test": "tsdx test",
     "lint": "tsdx lint",
+    "lint-fix": "tsdx lint --fix src",
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why",
