--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,10 @@ jobs:
         uses: bahmutov/npm-install@v1
 
       - name: Lint
-        run: npm lint
+        run: yarn lint
 
       - name: Test
-        run: npm test --ci --coverage --maxWorkers=2
+        run: yarn test --ci --coverage --maxWorkers=2
 
       - name: Build
-        run: npm build
+        run: yarn build
