--- a/package.json
+++ b/package.json
@@ -65,20 +65,20 @@
     "url": "https://github.com/zupee-labs/perfect-validator/issues"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^11.1.6",
-    "@types/jest": "^29.5.11",
-    "@types/mongodb": "^4.0.7",
-    "@types/node": "^20.10.6",
-    "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-node": "^29.7.0",
-    "size-limit": "^11.1.6",
-    "ts-jest": "^29.1.1",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.8.1",
-    "typescript": "^5.7.3"
+    "@size-limit/preset-small-lib": "11.1.6",
+    "@types/jest": "29.5.11",
+    "@types/mongodb": "4.0.7",
+    "@types/node": "20.10.6",
+    "husky": "9.1.7",
+    "jest": "29.7.0",
+    "jest-environment-node": "29.7.0",
+    "size-limit": "11.1.6",
+    "ts-jest": "29.1.1",
+    "tsdx": "0.14.1",
+    "tslib": "2.8.1",
+    "typescript": "5.7.3"
   },
   "dependencies": {
-    "mongodb": "^6.13.0"
+    "mongodb": "4.1.3"
   }
 }
