--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: ["22.x"]
+        node: ["14.x", "18.x", "22.x"]
         os: [ubuntu-latest]
         mongo: ["7.0"]
 
